# localbeam

./: LICENSE  README.md  index.html  package-lock.json  package.json  worfklow.example
.github/workflows/: release.yml
src/: App.tsx  api.ts  icons.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  contacts.rs  discovery.rs  http_server.rs  identity.rs  lib.rs  main.rs  settings.rs  state.rs  transfer.rs
