[package]
name = "localbeam"
version = "0.1.0"
description = "LocalBeam - peer-to-peer file sharing on your LAN"
edition = "2021"

[lib]
name = "localbeam_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.1", features = ["tray-icon", "image-png"] }
tauri-plugin-dialog = "2.0"
tauri-plugin-fs = "2.0"
tauri-plugin-opener = "2.2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-rustls = "0.26"
rustls = { version = "0.23", features = ["ring"] }
rustls-pemfile = "2"
rcgen = "0.13"

axum = { version = "0.7", features = ["multipart", "macros"] }
axum-server = { version = "0.7", features = ["tls-rustls"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "cors"] }

mdns-sd = "0.11"

uuid = { version = "1", features = ["v4", "serde"] }
hex = "0.4"
sha2 = "0.10"
anyhow = "1"
thiserror = "2"
once_cell = "1"
parking_lot = "0.12"
local-ip-address = "0.6"
hostname = "0.4"
dirs = "5"
bytes = "1"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2"
mime_guess = "2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
